# DLSS_2025

./: README.md  check_env.py  hello.py  pyproject.toml  requirements.txt  retire.py  task_2.py  task_3.py
day_1/: stml.py  task_1.py  task_4.py  task_5.py  task_6.py
day_2/: X.npy  task_1.py  task_2.py
