[project]
name = "dlss-2025"
version = "0.1.0"
description = "Deep Learning Summer School"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "absl-py==2.3.1",
    "accelerate==1.0.1",
    "anyio==4.10.0",
    "argon2-cffi-bindings==25.1.0",
    "argon2-cffi==25.1.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.4",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "cffi>=2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.1.7",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "diffusers==0.31.0",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "fastjsonschema==2.21.2",
    "filelock==3.19.1",
    "flatbuffers==25.2.10",
    "flask==3.1.0",
    "fonttools==4.59.2",
    "fqdn==1.5.1",
    "fsspec==2024.9.0",
    "ftfy==6.3.1",
    "gast==0.6.0",
    "google-auth==2.40.3",
    "google-pasta==0.2.0",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.74.0",
    "h11==0.16.0",
    "h5py==3.14.0",
    "hf-xet==1.1.8",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.34.4",
    "humanfriendly==10.0",
    "idna==3.10",
    "igraph==0.11.9",
    "imbalanced-learn==0.14.0",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "ipykernel==6.30.1",
    "ipython==8.37.0",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "json5==0.12.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.6",
    "jupyter-server==2.16.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.6",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "keras==3.11.2",
    "kiwisolver==1.4.9",
    "kubernetes==33.1.0",
    "langchain==0.3.27",
    "langchain-chroma==0.2.5",
    "langchain-core==0.3.75",
    "langchain-ollama==0.3.7",
    "langchain-text-splitters==0.3.9",
    "langsmith==0.4.19",
    "lark==1.2.2",
    "libclang==18.1.1",
    "llvmlite==0.44.0",
    "markdown==3.8.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.3",
    "ml-dtypes==0.5.3",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "namex==0.1.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "notebook==7.4.5",
    "notebook-shim==0.2.4",
    "numba>=0.61,<0.62",
    "numpy>=2.2.6",
    "ollama==0.5.3",
    "onnxruntime==1.22.1",
    "open-clip-torch==2.29.0",
    "opencv-python>=4.11.0,<4.12.0",
    "opt-einsum==3.4.0",
    "optree==0.17.0",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.3.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pillow==11.3.0",
    "pip==24.1.2",
    "platformdirs==4.3.8",
    "posthog==5.4.0",
    "problexity==0.5.11",
    "prometheus-client==0.22.1",
    "prompt-toolkit==3.0.51",
    "protobuf==6.32.0",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyparsing==3.1.2",
    "pyproject-hooks==1.2.0",
    "pypika==0.48.9",
    "pypdf==6.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-json-logger==3.3.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "regex==2024.9.11",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==14.1.0",
    "rpds-py==0.27.1",
    "rsa==4.9.1",
    "safetensors==0.4.5",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "send2trash==1.8.3",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.43",
    "stack-data==0.6.3",
    "stream-learn==0.8.24",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "termcolor==3.1.0",
    "terminado==0.18.1",
    "texttable==1.7.0",
    "threadpoolctl==3.6.0",
    "timm==1.0.11",
    "tinycss2==1.4.0",
    "tokenizers==0.21.4",
    "tomli==2.2.1",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tornado==6.5.2",
    "transformers>=4.55.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "ttkbootstrap==1.10.1",
    "typer==0.16.1",
    "types-python-dateutil==2.9.0.20250809",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "wrapt==1.17.3",
    "zipp==3.20.2",
]
